--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./assets/styles/styles.css" />
+    <link rel="stylesheet" href="./assets/styles/mobile.css" />
   </head>
   <body>
     <header>
@@ -26,10 +27,26 @@
           </div>
         </ul>
       </nav>
+      <div id="hamburger-menu-wrapper">
+        <span class="menu-bar"></span>
+        <span class="menu-bar"></span>
+        <span class="menu-bar"></span>
+      </div>
     </header>
     <main>
       <section id="hero">
-        <img src="./assets/images/hero.png" alt="hero image" loading="lazy" />
+        <img
+          id="hero-img"
+          src="./assets/images/hero.png"
+          alt="hero image"
+          loading="lazy"
+        />
+        <img
+          id="hero-img-m"
+          src="./assets/images/mobile/herom.svg"
+          alt="hero image"
+          loading="lazy"
+        />
       </section>
 
       <section id="portfolio">
@@ -56,6 +73,14 @@
               />
             </div>
           </div>
+        </div>
+        <div id="download-card-m">
+          <img
+            id="download-card-img-m"
+            src="./assets/images/mobile/downloadcardm.svg"
+            alt="download card mobile"
+            loading="lazy"
+          />
         </div>
         <div id="filler"></div>
         <div id="porfolio-content-wrapper">
@@ -106,8 +131,10 @@
       </section>
 
       <div class="strip">
-        <img src="./assets/images/strip.png" />
-        <h2 id="strip-text">EXPLORE OUR GAMES</h2>
+        <img src="./assets/images/strip.png" class="strip-img" />
+        <h2 class="strip-text">EXPLORE OUR GAMES</h2>
+        <img src="./assets/images/mobile/strip.svg" class="strip-img-m" />
+        <h2 class="strip-text-m">EXPLORE OUR GAMES</h2>
       </div>
 
       <section id="game-section">
@@ -162,14 +189,17 @@
         </div>
       </section>
 
-      <div class="strip">
-        <img src="./assets/images/strip2.png" />
+      <div class="strip" id="upcoming">
+        <img src="./assets/images/strip2.png" class="strip-img" />
+        <img src="./assets/images/mobile/upcoming.png" class="strip-img-m" />
       </div>
       <div class="strip" id="grid-strip">
-        <img src="./assets/images/grid.png" />
+        <img src="./assets/images/grid.png" class="strip-img" />
+        <img src="./assets/images/mobile/card-grid2.png" class="strip-img-m" />
       </div>
       <div class="strip" id="phn-strip">
-        <img src="./assets/images/phn.png" />
+        <img src="./assets/images/phn.png" class="strip-img" />
+        <img src="./assets/images/mobile/phone.png" class="strip-img-m" />
       </div>
       <section id="final">
         <div id="final-content-wrapper">
