--- a/index.html
+++ b/index.html
@@ -187,6 +187,38 @@
             <img id="gm-car" src="./assets/images/car.png" />
           </div>
         </div>
+        <div id="game-content-wrapper-m">
+          <div class="gm-content-card" id="top-game-card">
+            <h4>Game xyz</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Pellentesque ut turpis malesuada, pellentesque elit ut, commodo
+              tellus.
+            </p>
+            <h6>HEADING</h6>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Pellentesque ut turpis malesuada, pellentesque elit ut, commodo
+              tellus.
+            </p>
+          </div>
+          <img id="formula-m" src="./assets/images/mobile/formula.svg" />
+          <div class="gm-content-card" id="bottom-game-card">
+            <h4>Game xyz</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Pellentesque ut turpis malesuada, pellentesque elit ut, commodo
+              tellus.
+            </p>
+            <h6>HEADING</h6>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Pellentesque ut turpis malesuada, pellentesque elit ut, commodo
+              tellus.
+            </p>
+          </div>
+          <div id="game-strip"></div>
+        </div>
       </section>
 
       <div class="strip" id="upcoming">
@@ -226,7 +258,10 @@
       </section>
     </main>
     <footer>
-      <img src="./assets/images/footer.png" />
+      <img src="./assets/images/footer.png" id="footer-img" />
+      <img src="./assets/images/mobile/footer.svg" id="footer-img-m" />
+      <div id="footer-content"></div>
+      <div id="footer-content-m"></div>
     </footer>
   </body>
 </html>
