added changes to the code

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <div id="gm-strip">
               <img src="./assets/images/pp-strip.png" />
             </div>
-            <img id="gm-car" src="./assets/images/car.png" />
+            <img id="gm-car" src="./assets/images/test1.png" />
           </div>
         </div>
         <div id="game-content-wrapper-m">
