mobile styles migrate

--- a/index.html
+++ b/index.html
@@ -81,6 +81,26 @@
             alt="download card mobile"
             loading="lazy"
           />
+          <div id="download-card-m-content">
+            <h2>
+              <span>ENTER THE RALLY OF</span>
+              FANTASY MOTORSPORTS
+            </h2>
+            <div id="download-options-wrapper-m">
+              <img
+                class="download-options-m"
+                src="./assets/images/app-store.png"
+                alt="play-store"
+                loading="lazy"
+              />
+              <img
+                class="download-options-m"
+                src="./assets/images/play-store.png"
+                alt="play-store"
+                loading="lazy"
+              />
+            </div>
+          </div>
         </div>
         <div id="filler"></div>
         <div id="porfolio-content-wrapper">
@@ -217,7 +237,11 @@
               tellus.
             </p>
           </div>
-          <div id="game-strip"></div>
+          <div id="game-strip">
+            <img src="./assets/images/mobile/stars.svg" id="stars" />
+            <div id="dark-filler"></div>
+            <img src="./assets/images/mobile/car.png" id="f1-car" />
+          </div>
         </div>
       </section>
 
@@ -261,7 +285,24 @@
       <img src="./assets/images/footer.png" id="footer-img" />
       <img src="./assets/images/mobile/footer.svg" id="footer-img-m" />
       <div id="footer-content"></div>
-      <div id="footer-content-m"></div>
+      <div id="footer-content-m">
+        <li>Terms & Conditions</li>
+        <li>Privacy Policy</li>
+        <li>Help & Support</li>
+        <div id="footer-card">
+          <div id="footer-card-header"></div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Try Now.
+          </p>
+        </div>
+        <div id="footer-subcard">
+          <div id="footer-subcard-logo"></div>
+          <div id="footer-subcard-content">
+            <h4>Podium Pe</h4>
+            <p>A Product of Shortsqueeze Pvt Ltd.</p>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
