--- a/toc.html
+++ b/toc.html
@@ -8,31 +8,32 @@
   </head>
   <body>
     <header>
-        <img
-          id="logo"
-          src="./assets/images/logo2.svg"
-          alt="logo"
-          loading="lazy"
-        />
-        <nav>
-          <ul id="nav-menu">
-            <a><li>About</li></a>
-            <a><li>How to Play</li></a>
-            <div id="category-dropmenu">
-              <a><li>Category</li></a>
-              <div id="drop-arrow">
-                <img src="./assets/images/nav.svg" alt="down-arrow" />
-              </div>
+      <img
+        id="logo"
+        src="./assets/images/logo2.svg"
+        alt="logo"
+        loading="lazy"
+      />
+      <nav>
+        <ul id="nav-menu">
+          <a><li>About</li></a>
+          <a><li>How to Play</li></a>
+          <div id="category-dropmenu">
+            <a><li>Category</li></a>
+            <div id="drop-arrow">
+              <img src="./assets/images/nav.svg" alt="down-arrow" />
             </div>
-          </ul>
-        </nav>
-        <div id="hamburger-menu-wrapper">
-          <span class="menu-bar"></span>
-          <span class="menu-bar"></span>
-          <span class="menu-bar"></span>
-        </div>
-      </header>
+          </div>
+        </ul>
+      </nav>
+      <div id="hamburger-menu-wrapper">
+        <span class="menu-bar"></span>
+        <span class="menu-bar"></span>
+        <span class="menu-bar"></span>
+      </div>
+    </header>
     <main>
+      <section id="doc-nav"></section>
       <section id="toc">
         <div id="toc-section-header">
           <h1>Privacy Policy</h1>
@@ -85,7 +86,7 @@
           </p>
         </div>
         <div class="clause-wrapper">
-          <h1>01 <span class="dash"></span>Clause Two</h1>
+          <h1>02 <span class="dash"></span>Clause Two</h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed
             mi imperdiet, scelerisque urna quis, posuere urna. Vivamus quam
@@ -126,7 +127,7 @@
           </p>
         </div>
         <div class="clause-wrapper">
-          <h1>01 <span class="dash"></span>Clause Three</h1>
+          <h1>03 <span class="dash"></span>Clause Three</h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed
             mi imperdiet, scelerisque urna quis, posuere urna. Vivamus quam
@@ -162,7 +163,7 @@
           </p>
         </div>
         <div class="clause-wrapper" id="last">
-          <h1>01 <span class="dash"></span>Summary</h1>
+          <h1>04 <span class="dash"></span>Summary</h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed
             mi imperdiet, scelerisque urna quis, posuere urna. Vivamus quam
