--- a/toc.html
+++ b/toc.html
@@ -33,7 +33,15 @@
       </div>
     </header>
     <main>
-      <section id="doc-nav"></section>
+      <section id="doc-nav-wrapper">
+        <h1>TERMS & POLICIES</h1> 
+        <div id="red-line"></div>
+        <div id="doc-nav">
+            <div class="doc-nav-item">Privacy Policy</div>
+            <div class="doc-nav-item">Terms of Service</div>
+            <div class="doc-nav-item">Help & Support</div>
+        </div>
+      </section>
       <section id="toc">
         <div id="toc-section-header">
           <h1>Privacy Policy</h1>
