--- a/index.html
+++ b/index.html
@@ -284,7 +284,33 @@
     <footer>
       <img src="./assets/images/footer.png" id="footer-img" />
       <img src="./assets/images/mobile/footer.svg" id="footer-img-m" />
-      <div id="footer-content"></div>
+      <div id="footer-content">
+        <div id="footer-content-left">
+          <div id="footer-content-logo-wrapper">
+            <div id="pm-logo">
+              <img src="./assets/images/blogo.svg"/>
+            </div>
+            <div id="pm-text">
+              <small>Podium Pe</small>
+              <span>A Product of Shortsqueeze Pvt Ltd.</span>
+            </div>
+          </div>
+          <div id="copyright">Copyright 2022</div>
+        </div>
+        <div id="footer-content-right">
+          <div id="pm-nav">
+            <div class="pm-nav-items">Terms & Conditions</div>
+            <div class="pm-nav-items">Privacy Policy</div>
+            <div class="pm-nav-items">Help & Support</div>
+          </div>
+          <div id="pm-card">
+            <p id="pm-card-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Try Now.
+            </p>
+            <div id="pm-subcard"></div>
+          </div>
+        </div>
+      </div>
       <div id="footer-content-m">
         <li>Terms & Conditions</li>
         <li>Privacy Policy</li>
