--- a/toc.html
+++ b/toc.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/styles/styles.css" />
+    <link rel="stylesheet" href="./assets/styles/mobile.css" />
     <link rel="stylesheet" href="./assets/styles/toc.css" />
     <title>Document</title>
   </head>
@@ -183,6 +185,54 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+        <img src="./assets/images/footer.png" id="footer-img" />
+        <img src="./assets/images/mobile/footer.svg" id="footer-img-m" />
+        <div id="footer-content">
+          <div id="footer-content-left">
+            <div id="footer-content-logo-wrapper">
+              <div id="pm-logo">
+                <img src="./assets/images/blogo.svg"/>
+              </div>
+              <div id="pm-text">
+                <small>Podium Pe</small>
+                <span>A Product of Shortsqueeze Pvt Ltd.</span>
+              </div>
+            </div>
+            <div id="copyright">Copyright 2022</div>
+          </div>
+          <div id="footer-content-right">
+            <div id="pm-nav">
+              <div class="pm-nav-items">Terms & Conditions</div>
+              <div class="pm-nav-items">Privacy Policy</div>
+              <div class="pm-nav-items">Help & Support</div>
+            </div>
+            <div id="pm-card">
+              <p id="pm-card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Try Now.
+              </p>
+              <div id="pm-subcard"></div>
+            </div>
+          </div>
+        </div>
+        <div id="footer-content-m">
+          <li>Terms & Conditions</li>
+          <li>Privacy Policy</li>
+          <li>Help & Support</li>
+          <div id="footer-card">
+            <div id="footer-card-header"></div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Try Now.
+            </p>
+          </div>
+          <div id="footer-subcard">
+            <div id="footer-subcard-logo"></div>
+            <div id="footer-subcard-content">
+              <h4>Podium Pe</h4>
+              <p>A Product of Shortsqueeze Pvt Ltd.</p>
+            </div>
+          </div>
+        </div>
+      </footer>
   </body>
 </html>
