desktop footer done

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         <div id="footer-content-left">
           <div id="footer-content-logo-wrapper">
             <div id="pm-logo">
-              <img src="./assets/images/blogo.svg"/>
+              <img src="./assets/images/blogo.svg" />
             </div>
             <div id="pm-text">
               <small>Podium Pe</small>
@@ -307,7 +307,14 @@
             <p id="pm-card-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Try Now.
             </p>
-            <div id="pm-subcard"></div>
+            <div id="pm-subcard">
+              <img src="./assets/images/logo2.svg" id="subcard-footer-logo" />
+              <span id="subcard-footer-text"
+                ><span id="subcard-footer-text-heading">Lights Out</span> By
+                Podium Pe</span
+              >
+              <img src="./assets/images/arrow.svg" id="subcard-footer-arrow" />
+            </div>
           </div>
         </div>
       </div>
