--- a/toc.html
+++ b/toc.html
@@ -36,12 +36,12 @@
     </header>
     <main>
       <section id="doc-nav-wrapper">
-        <h1>TERMS & POLICIES</h1> 
+        <h1>TERMS & POLICIES</h1>
         <div id="red-line"></div>
         <div id="doc-nav">
-            <div class="doc-nav-item">Privacy Policy</div>
-            <div class="doc-nav-item">Terms of Service</div>
-            <div class="doc-nav-item">Help & Support</div>
+          <div class="doc-nav-item">Privacy Policy</div>
+          <div class="doc-nav-item">Terms of Service</div>
+          <div class="doc-nav-item">Help & Support</div>
         </div>
       </section>
       <section id="toc">
@@ -186,53 +186,60 @@
       </section>
     </main>
     <footer>
-        <img src="./assets/images/footer.png" id="footer-img" />
-        <img src="./assets/images/mobile/footer.svg" id="footer-img-m" />
-        <div id="footer-content">
-          <div id="footer-content-left">
-            <div id="footer-content-logo-wrapper">
-              <div id="pm-logo">
-                <img src="./assets/images/blogo.svg"/>
-              </div>
-              <div id="pm-text">
-                <small>Podium Pe</small>
-                <span>A Product of Shortsqueeze Pvt Ltd.</span>
-              </div>
+      <img src="./assets/images/footer.png" id="footer-img" />
+      <img src="./assets/images/mobile/footer.svg" id="footer-img-m" />
+      <div id="footer-content">
+        <div id="footer-content-left">
+          <div id="footer-content-logo-wrapper">
+            <div id="pm-logo">
+              <img src="./assets/images/blogo.svg" />
             </div>
-            <div id="copyright">Copyright 2022</div>
-          </div>
-          <div id="footer-content-right">
-            <div id="pm-nav">
-              <div class="pm-nav-items">Terms & Conditions</div>
-              <div class="pm-nav-items">Privacy Policy</div>
-              <div class="pm-nav-items">Help & Support</div>
-            </div>
-            <div id="pm-card">
-              <p id="pm-card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Try Now.
-              </p>
-              <div id="pm-subcard"></div>
+            <div id="pm-text">
+              <small>Podium Pe</small>
+              <span>A Product of Shortsqueeze Pvt Ltd.</span>
             </div>
           </div>
+          <div id="copyright">Copyright 2022</div>
         </div>
-        <div id="footer-content-m">
-          <li>Terms & Conditions</li>
-          <li>Privacy Policy</li>
-          <li>Help & Support</li>
-          <div id="footer-card">
-            <div id="footer-card-header"></div>
-            <p>
+        <div id="footer-content-right">
+          <div id="pm-nav">
+            <div class="pm-nav-items">Terms & Conditions</div>
+            <div class="pm-nav-items">Privacy Policy</div>
+            <div class="pm-nav-items">Help & Support</div>
+          </div>
+          <div id="pm-card">
+            <p id="pm-card-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Try Now.
             </p>
-          </div>
-          <div id="footer-subcard">
-            <div id="footer-subcard-logo"></div>
-            <div id="footer-subcard-content">
-              <h4>Podium Pe</h4>
-              <p>A Product of Shortsqueeze Pvt Ltd.</p>
+            <div id="pm-subcard">
+              <img src="./assets/images/logo2.svg" id="subcard-footer-logo" />
+              <span id="subcard-footer-text"
+                ><span id="subcard-footer-text-heading">Lights Out</span> By
+                Podium Pe</span
+              >
+              <img src="./assets/images/arrow.svg" id="subcard-footer-arrow" />
             </div>
           </div>
         </div>
-      </footer>
+      </div>
+      <div id="footer-content-m">
+        <li>Terms & Conditions</li>
+        <li>Privacy Policy</li>
+        <li>Help & Support</li>
+        <div id="footer-card">
+          <div id="footer-card-header"></div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Try Now.
+          </p>
+        </div>
+        <div id="footer-subcard">
+          <div id="footer-subcard-logo"></div>
+          <div id="footer-subcard-content">
+            <h4>Podium Pe</h4>
+            <p>A Product of Shortsqueeze Pvt Ltd.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
