--- a/toc.html
+++ b/toc.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./assets/styles/styles.css" />
     <link rel="stylesheet" href="./assets/styles/mobile.css" />
     <link rel="stylesheet" href="./assets/styles/toc.css" />
+    <link rel="stylesheet" href="./assets/styles/toc-mobile.css"/>
     <title>Document</title>
   </head>
   <body>
@@ -34,6 +35,7 @@
         <span class="menu-bar"></span>
       </div>
     </header>
+    <hr id="header-hr"/>
     <main>
       <section id="doc-nav-wrapper">
         <h1>TERMS & POLICIES</h1>
@@ -52,7 +54,7 @@
             <span>24th July, 2023</span>
           </div>
         </div>
-        <p>
+        <p id="top-p">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed mi
           imperdiet, scelerisque urna quis, posuere urna. Vivamus quam felis,
           efficitur ut ante et, sollicitudin sodales nisl. Sed laoreet felis vel
