--- a/toc.html
+++ b/toc.html
@@ -188,7 +188,7 @@
       </section>
     </main>
     <footer>
-      <img src="./assets/images/footer.png" id="footer-img" />
+      <!-- <img src="./assets/images/footer.png" id="footer-img" /> -->
       <img src="./assets/images/mobile/footer.svg" id="footer-img-m" />
       <div id="footer-content">
         <div id="footer-content-left">
@@ -229,13 +229,25 @@
         <li>Privacy Policy</li>
         <li>Help & Support</li>
         <div id="footer-card">
-          <div id="footer-card-header"></div>
+          <div id="footer-card-header">
+            <div id="footer-card-header-m-logo">
+              <img src="./assets/images/logo2.svg" />
+            </div>
+
+            <span id="footer-card-hearer-text"
+              ><span id="footer-card-hearer-text-heading">Lights Out</span> By
+              Podium Pe</span
+            >
+            <img src="./assets/images/arrow.svg" id="subcard-footer-arrow" />
+          </div>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Try Now.
           </p>
         </div>
         <div id="footer-subcard">
-          <div id="footer-subcard-logo"></div>
+          <div id="footer-subcard-logo">
+            <img src="./assets/images/blogo.svg" />
+          </div>
           <div id="footer-subcard-content">
             <h4>Podium Pe</h4>
             <p>A Product of Shortsqueeze Pvt Ltd.</p>
