privacy policy page 1

--- a/toc.html
+++ b/toc.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./assets/styles/styles.css" />
     <link rel="stylesheet" href="./assets/styles/mobile.css" />
     <link rel="stylesheet" href="./assets/styles/toc.css" />
-    <link rel="stylesheet" href="./assets/styles/toc-mobile.css"/>
+    <link rel="stylesheet" href="./assets/styles/toc-mobile.css" />
     <title>Document</title>
   </head>
   <body>
@@ -35,7 +35,7 @@
         <span class="menu-bar"></span>
       </div>
     </header>
-    <hr id="header-hr"/>
+    <hr id="header-hr" />
     <main>
       <section id="doc-nav-wrapper">
         <h1>TERMS & POLICIES</h1>
@@ -46,11 +46,17 @@
           <div class="doc-nav-item">Help & Support</div>
         </div>
       </section>
+      <div id="mobile-dropdown">
+        <select>
+          <option>Privacy Policy</option>
+        </select>
+      </div>
       <section id="toc">
         <div id="toc-section-header">
           <h1>Privacy Policy</h1>
           <div id="updated-date">
             <small>Last Updated</small>
+            <pre id="semicolon">:</pre>
             <span>24th July, 2023</span>
           </div>
         </div>
