help page added

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
       <div class="strip" id="upcoming">
         <img src="./assets/images/strip2.png" class="strip-img" />
-        <img src="./assets/images/mobile/upcoming.png" class="strip-img-m" />
+        <img src="./assets/images/mobile/upcoming.svg" class="strip-img-m" />
       </div>
       <div class="strip" id="grid-strip">
         <img src="./assets/images/grid.png" class="strip-img" />
