--- a/help-support.html
+++ b/help-support.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/styles/mobile.css" />
     <link rel="stylesheet" href="./assets/styles/toc.css" />
     <link rel="stylesheet" href="./assets/styles/toc-mobile.css" />
+    <link rel="stylesheet" href="./assets/styles/help.css"/>
     <title>Document</title>
   </head>
   <body>
@@ -60,12 +61,15 @@
             <span>24th July, 2023</span>
           </div>
         </div>
-        <p id="top-p">
+        <p id="first">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed mi
           imperdiet, scelerisque urna quis, posuere urna. Vivamus quam felis,
           efficitur ut ante et, sollicitudin sodales nisl. Sed laoreet felis vel
           sapien lobortis, in fermentum lectus lobortis. Orci varius natoque
           penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+          <span id="queries"
+            >For any queries or help, write to us <span class="email">xyz@gmail.com</span> </span
+          >
         </p>
         <div class="clause-wrapper" id="fch">
           <h1>01 <span class="dash"></span>Accounts</h1>
@@ -73,112 +77,143 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed
             mi imperdiet, scelerisque urna quis, posuere urna. Vivamus quam
             felis, efficitur ut ante et, sollicitudin sodales nisl. Sed laoreet
-            felis vel sapien lobortis, in fermentum lectus lobortis. Orci varius
-            natoque penatibus et magnis dis parturient montes, nascetur
-            ridiculus mus. Quisque lacinia id ligula vel gravida. Praesent nisi
-            velit, egestas eget elementum non, facilisis vitae nibh. Phasellus
-            interdum eu eros ac pharetra.
+            felis vel sapien lobortis, in fermentum lectus lobortis.
           </p>
-          <h4>Sub-Heading Level One</h4>
-          <p>
-            Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
-            placerat enim. Suspendisse lectus quam, fermentum non bibendum nec,
-            feugiat et diam. Suspendisse luctus urna in tortor aliquet, sed
-            tempus justo tincidunt. Sed ac libero quam. Class aptent taciti
-            sociosqu ad litora torquent per conubia nostra, per inceptos
-            himenaeos. In non enim dolor. Donec semper porta ultricies. Fusce
-            semper, ligula sit amet consequat luctus, erat sapien ultricies
-            nulla, at cursus risus diam sit amet urna.
-          </p>
-          <p>
-            Suspendisse potenti. Interdum et malesuada fames ac ante ipsum
-            primis in faucibus. Etiam vel faucibus est. Etiam id luctus diam.
-            Fusce ornare lacinia orci, aliquam gravida lacus lobortis sit amet.
-            Sed tempus aliquam ipsum, in euismod erat euismod et. Phasellus
-            aliquam in sem non volutpat. Suspendisse quis sem eget magna commodo
-            ornare. Etiam scelerisque magna ac tellus molestie accumsan. Sed vel
-            euismod ante, at vulputate sem. Phasellus vitae mollis libero. Donec
-            in venenatis mauris. Sed blandit sem felis, quis lacinia lectus
-            aliquet vitae. Integer efficitur quis nulla vitae pellentesque. Nam
-            nec erat at velit elementum aliquam. Fusce vitae egestas metus.
-          </p>
+          <ol class="sub-headings">
+            <li>
+              <h3>Suspendisse quis sem eget magna commodo ornare?</h3>
+              <p>
+                Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
+                placerat enim. Suspendisse lectus quam, fermentum non bibendum
+                nec, feugiat et diam. Suspendisse luctus urna in tortor aliquet,
+                sed tempus justo tincidunt. Sed ac libero quam. Class aptent
+                taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos. In non enim dolor. Donec semper porta
+                ultricies. Fusce semper, ligula sit amet consequat luctus, erat
+                sapien ultricies nulla, at cursus risus diam sit amet urna.
+              </p>
+            </li>
+            <li class="last-li">
+              <h3>Suspendisse quis sem eget magna commodo ornare?</h3>
+              <p>
+                Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
+                placerat enim. Suspendisse lectus quam, fermentum non bibendum
+                nec, feugiat et diam. Suspendisse luctus urna in tortor aliquet,
+                sed tempus justo tincidunt. Sed ac libero quam. Class aptent
+                taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos. In non enim dolor. Donec semper porta
+                ultricies. Fusce semper, ligula sit amet consequat luctus, erat
+                sapien ultricies nulla, at cursus risus diam sit amet urna.
+              </p>
+              <p>
+                Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
+                placerat enim. Suspendisse lectus quam, fermentum non bibendum
+                nec, feugiat et diam. Suspendisse luctus urna in tortor aliquet,
+                sed tempus justo tincidunt. Sed ac libero quam. Class aptent
+                taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos. In non enim dolor.
+              </p>
+            </li>
+          </ol>
         </div>
         <div class="clause-wrapper">
           <h1>02 <span class="dash"></span>Payments</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed
-            mi imperdiet, scelerisque urna quis, posuere urna. Vivamus quam
-            felis, efficitur ut ante et, sollicitudin sodales nisl. Sed laoreet
-            felis vel sapien lobortis, in fermentum lectus lobortis. Orci varius
-            natoque penatibus et magnis dis parturient montes, nascetur
-            ridiculus mus. Quisque lacinia id ligula vel gravida. Praesent nisi
-            velit, egestas eget elementum non, facilisis vitae nibh. Phasellus
-            interdum eu eros ac pharetra.
-          </p>
-          <h4>Sub-Heading Level One</h4>
-          <p>
-            Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
-            placerat enim. Suspendisse lectus quam, fermentum non bibendum nec,
-            feugiat et diam. Suspendisse luctus urna in tortor aliquet, sed
-            tempus justo tincidunt. Sed ac libero quam. Class aptent taciti
-            sociosqu ad litora torquent per conubia nostra, per inceptos
-            himenaeos. In non enim dolor.
-          </p>
-          <h6>Sub-Heading Level Two</h6>
-          <ul>
-            <li>Suspendisse potenti. Interdum et malesuada fames ac ante</li>
-            <li>Ipsum primis in faucibus. Etiam vel faucibus est.</li>
+          <ol class="sub-headings">
             <li>
-              Etiam id luctus diam. Fusce ornare lacinia orci, aliquam gravida
-              lacus lobortis sit amet.
+              <h3>Suspendisse quis sem eget magna commodo ornare?</h3>
+              <p>
+                Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
+                placerat enim. Suspendisse lectus quam, fermentum non bibendum
+                nec, feugiat et diam. Suspendisse luctus urna in tortor aliquet,
+                sed tempus justo tincidunt. Sed ac libero quam. Class aptent
+                taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos. In non enim dolor. Donec semper porta
+                ultricies. Fusce semper, ligula sit amet consequat luctus, erat
+                sapien ultricies nulla, at cursus risus diam sit amet urna.
+              </p>
+              <p>
+                Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
+                placerat enim. Suspendisse lectus quam, fermentum non bibendum
+                nec, feugiat et diam. Suspendisse luctus urna in tortor aliquet,
+                sed tempus justo tincidunt. Sed ac libero quam. Class aptent
+                taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos. In non enim dolor.
+              </p>
             </li>
-            <li>Sed tempus aliquam ipsum, in euismod erat euismod et.</li>
-          </ul>
-          <p>
-            Phasellus aliquam in sem non volutpat. Suspendisse quis sem eget
-            magna commodo ornare. Etiam scelerisque magna ac tellus molestie
-            accumsan. Sed vel euismod ante, at vulputate sem. Phasellus vitae
-            mollis libero. Donec in venenatis mauris. Sed blandit sem felis,
-            quis lacinia lectus aliquet vitae. Integer efficitur quis nulla
-            vitae pellentesque. Nam nec erat at velit elementum aliquam. Fusce
-            vitae egestas metus.
-          </p>
+            <li>
+              <h3>Suspendisse quis sem eget magna commodo ornare?</h3>
+              <p>
+                Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
+                placerat enim. Suspendisse lectus quam, fermentum non bibendum
+                nec, feugiat et diam. Suspendisse luctus urna in tortor aliquet,
+                sed tempus justo tincidunt. Sed ac libero quam. Class aptent
+                taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos. In non enim dolor. Donec semper porta
+                ultricies. Fusce semper, ligula sit amet consequat luctus, erat
+                sapien ultricies nulla, at cursus risus diam sit amet urna.
+              </p>
+            </li>
+            <li class="last-li">
+              <h3>Fusce vitae vulputate risus, ut placerat enim?</h3>
+              <p>
+                Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
+                placerat enim. Suspendisse lectus quam, fermentum non bibendum
+                nec, feugiat et diam. Suspendisse luctus urna in tortor aliquet,
+                sed tempus justo tincidunt. Sed ac libero quam. Class aptent
+                taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos. In non enim dolor. Donec semper porta
+                ultricies. Fusce semper, ligula sit amet consequat luctus, erat
+                sapien ultricies nulla, at cursus risus diam sit amet urna.
+              </p>
+            </li>
+          </ol>
         </div>
-        <div class="clause-wrapper">
+        <div class="clause-wrapper" id="last">
           <h1>03 <span class="dash"></span>Winnings</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed
-            mi imperdiet, scelerisque urna quis, posuere urna. Vivamus quam
-            felis, efficitur ut ante et, sollicitudin sodales nisl. Sed laoreet
-            felis vel sapien lobortis, in fermentum lectus lobortis. Orci varius
-            natoque penatibus et magnis dis parturient montes, nascetur
-            ridiculus mus. Quisque lacinia id ligula vel gravida. Praesent nisi
-            velit, egestas eget elementum non, facilisis vitae nibh. Phasellus
-            interdum eu eros ac pharetra.
-          </p>
-          <h4>Sub-Heading Level One</h4>
-          <p>
-            Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
-            placerat enim. Suspendisse lectus quam, fermentum non bibendum nec,
-            feugiat et diam. Suspendisse luctus urna in tortor aliquet, sed
-            tempus justo tincidunt. Sed ac libero quam. Class aptent taciti
-            sociosqu ad litora torquent per conubia nostra, per inceptos
-            himenaeos. In non enim dolor. Donec semper porta ultricies. Fusce
-            semper, ligula sit amet consequat luctus, erat sapien ultricies
-            nulla, at cursus risus diam sit amet urna.
-          </p>
-          <p>
-            Suspendisse potenti. Interdum et malesuada fames ac ante ipsum
-            primis in faucibus. Etiam vel faucibus est. Etiam id luctus diam.
-            Fusce ornare lacinia orci, aliquam gravida lacus lobortis sit amet.
-            Sed tempus aliquam ipsum, in euismod erat euismod et. Phasellus
-            aliquam in sem non volutpat. Suspendisse quis sem eget magna commodo
-            ornare. Etiam scelerisque magna ac tellus molestie accumsan. Sed vel
-            euismod ante, at vulputate sem. Phasellus vitae mollis libero. Donec
-            in venenatis mauris. Sed blandit sem felis, quis lacinia lectus
-            aliquet vitae. Integer efficitur quis nulla vitae pellentesque. Nam
-            nec erat at velit elementum aliquam. Fusce vitae egestas metus.
-          </p>
+          <ol class="sub-headings">
+            <li>
+              <h3>Suspendisse quis sem eget magna commodo ornare?</h3>
+              <p>
+                Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
+                placerat enim. Suspendisse lectus quam, fermentum non bibendum
+                nec, feugiat et diam. Suspendisse luctus urna in tortor aliquet,
+                sed tempus justo tincidunt. Sed ac libero quam. Class aptent
+                taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos. In non enim dolor. Donec semper porta
+                ultricies. Fusce semper, ligula sit amet consequat luctus, erat
+                sapien ultricies nulla, at cursus risus diam sit amet urna.
+              </p>
+              <p>
+                Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
+                placerat enim. Suspendisse lectus quam, fermentum non bibendum
+                nec, feugiat et diam. Suspendisse luctus urna in tortor aliquet,
+                sed tempus justo tincidunt. Sed ac libero quam. Class aptent
+                taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos. In non enim dolor.
+              </p>
+            </li>
+            <li class="last-li">
+              <h3>Suspendisse quis sem eget magna commodo ornare?</h3>
+              <p>
+                Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
+                placerat enim. Suspendisse lectus quam, fermentum non bibendum
+                nec, feugiat et diam. Suspendisse luctus urna in tortor aliquet,
+                sed tempus justo tincidunt. Sed ac libero quam. Class aptent
+                taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos. In non enim dolor. Donec semper porta
+                ultricies. Fusce semper, ligula sit amet consequat luctus, erat
+                sapien ultricies nulla, at cursus risus diam sit amet urna.
+              </p>
+              <p>
+                Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
+                placerat enim. Suspendisse lectus quam, fermentum non bibendum
+                nec, feugiat et diam. Suspendisse luctus urna in tortor aliquet,
+                sed tempus justo tincidunt. Sed ac libero quam. Class aptent
+                taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos. In non enim dolor.
+              </p>
+            </li>
+          </ol>
         </div>
       </section>
     </main>
