subcard-m img1 added

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             <button id="learn-more">learn more</button>
           </div>
         </div>
+        <img src="./assets/images/whats-it.svg" id="whats-it"/>
         <div id="porfolio-content-wrapper-m">
           <div class="num-card-m">
             <div class="num-card-row1">
